--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
     commands:
       - curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
       - unzip -q awscliv2.zip
-      - ./aws/install -i /usr/local/aws-cli -b /usr/local/bin
+      - ./aws/install -i /usr/local/aws-cli -b /usr/local/bin --update
       - echo Logging in to Amazon ECR...
       - aws --version
       - $(aws ecr get-login --no-include-email --region us-east-1)
