--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,29 +1,16 @@
-version: 0.2
-phases:
+version: 0.2phases:
   pre_build:
     commands:
-      - curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-      - unzip -q awscliv2.zip
-      - ./aws/install -i /usr/local/aws-cli -b /usr/local/bin --update
       - echo Logging in to Amazon ECR...
-      - aws --version
-      - $(aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/c4u9e2h2)
-      - REPOSITORY_URI=public.ecr.aws/c4u9e2h2/qwikbot
-      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
+      - $(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)
   build:
     commands:
       - echo Build started on `date`
-      - echo Building the Docker image...          
-      - docker build -t $REPOSITORY_URI:latest .
-      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+      - echo Building the Docker image...
+      - docker build -t  qwikbot:latest .
+      - docker tag qwikbot:latest public.ecr.aws/c4u9e2h2/qwikbot:latest
   post_build:
     commands:
       - echo Build completed on `date`
-      - echo Pushing the Docker images...
-      - docker push $REPOSITORY_URI:latest
-      - docker push $REPOSITORY_URI:$IMAGE_TAG
-      - echo Writing image definitions file...
-      - printf '[{"name":"qwikbot","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
-artifacts:
-  files: imagedefinitions.json
+      - echo Pushing the Docker image...
+      - docker push public.ecr.aws/c4u9e2h2/qwikbot:latest
