--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
-      - $(aws ecr get-login --region $AWS_DEFAULT_REGION)
+      - $(docker login --username AWS --password-stdin public.ecr.aws/c4u9e2h2)
       - REPOSITORY_URI=public.ecr.aws/c4u9e2h2/qwikbot
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
