--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       - echo Logging in to Amazon ECR...
       - aws --version
       - docker --version 
-      - $(aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 657210287044.dkr.ecr.ap-south-1.amazonaws.com)
+      - $(aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/c4u9e2h2)
       - REPOSITORY_URI=public.ecr.aws/c4u9e2h2/qwikbot
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
