--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,8 +5,7 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws --version
-      - PASSWORD= $(aws ecr-public get-login-password --region us-east-1  2>&1)
-      - docker login -u AWS -p $PASSWORD https://public.ecr.aws/c4u9e2h2
+      - $(aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/c4u9e2h2)
       - REPOSITORY_URI=public.ecr.aws/c4u9e2h2/qwikbot
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
